--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.2
+  getflutter: ^1.0.11
+  outline_material_icons: ^0.1.1
 
 dev_dependencies:
   flutter_test:
