--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   getflutter: ^1.0.11
   outline_material_icons: ^0.1.1
+  flutter_svg: ^0.17.4
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,7 @@ flutter:
   assets:
     - assets/
     - assets/images/logo.png
+    - assets/svg/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
