--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,7 +37,8 @@ target 'Runner' do
   use_modular_headers!
   
   # Flutter Pod
-
+  # add pods for desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
   copied_flutter_dir = File.join(__dir__, 'Flutter')
   copied_framework_path = File.join(copied_flutter_dir, 'Flutter.framework')
   copied_podspec_path = File.join(copied_flutter_dir, 'Flutter.podspec')
