--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   outline_material_icons: ^0.1.1
   flutter_svg: ^0.17.4
   http: ^0.12.0+4
+  image_picker: ^0.6.5
+  image_cropper: ^1.2.1
+  firebase: ^7.3.0
+  firebase_auth: ^0.15.5+3
+  google_sign_in: ^3.2.4
+  firebase_storage: 3.0.4
 
 dev_dependencies:
   flutter_test:
