--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^0.15.5+3
   google_sign_in: ^3.2.4
   firebase_storage: 3.0.4
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
   assets:
     - assets/
     - assets/images/logo.png
+    - assets/images/background.jfif
     - assets/svg/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
