--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^3.2.4
   firebase_storage: 3.0.4
   url_launcher: ^5.4.2
+  photo_view: ^0.9.2
 
 dev_dependencies:
   flutter_test:
