--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: 3.0.4
   url_launcher: ^5.4.2
   photo_view: ^0.9.2
+  flutter_signin_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
