--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.2
   getflutter: ^1.0.11
@@ -37,6 +34,7 @@ dependencies:
   url_launcher: ^5.4.2
   photo_view: ^0.9.2
   flutter_signin_button: ^1.0.0
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
