--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   url_launcher: ^5.4.2
   photo_view: ^0.9.2
   flutter_signin_button: ^1.0.0
+  flutter_secure_storage: ^3.3.3
+
+
 
 dev_dependencies:
   flutter_test:
