--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   photo_view: ^0.9.2
   flutter_signin_button: ^1.0.0
   flutter_secure_storage: ^3.3.3
+  video_player: ^0.10.9
 
 
 
@@ -60,6 +61,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/background.jfif
     - assets/svg/
+    - assets/video/asset.mp4
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
