--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   firebase: ^7.3.0
   firebase_auth: ^0.15.5+3
   google_sign_in: ^3.2.4
-  firebase_storage: 3.0.4
+  firebase_storage: 3.0.8
   url_launcher: ^5.4.2
   photo_view: ^0.9.2
   flutter_signin_button: ^1.0.0
   flutter_secure_storage: ^3.3.3
   video_player: ^0.10.9
+  file_picker: ^1.6.3+2
 
 
 
