--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   video_player: ^0.10.9
   file_picker: ^1.4.3+1
   flare_flutter: ^2.0.3
-
+  flare_splash_screen: ^3.0.1
 
 
 dev_dependencies:
