--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   video_player: ^0.10.9
   file_picker: ^1.4.3+1
   flare_flutter: ^2.0.3
-  flare_splash_screen: ^3.0.1
   webview_flutter: ^0.3.21
+  splashscreen: ^1.2.0
+  liquid_pull_to_refresh: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
     - assets/svg/
     - assets/video/asset.mp4
     - assets/animation/
+    - assets/images/man.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
