--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,6 +75,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires access to phone contacts to add new contact as per user will</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
