--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   webview_flutter: ^0.3.21
   splashscreen: ^1.2.0
   liquid_pull_to_refresh: ^1.2.0
+  flutter_staggered_grid_view: ^0.3.0
+  flutter_progress_button: '^0.6.4'
 
 dev_dependencies:
   flutter_test:
