--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   liquid_pull_to_refresh: ^1.2.0
   flutter_staggered_grid_view: ^0.3.0
   flutter_progress_button: '^0.6.4'
+  simple_permissions: ^0.1.9
+  contacts_service: ^0.4.6
 
 dev_dependencies:
   flutter_test:
