--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_progress_button: '^0.6.4'
   simple_permissions: ^0.1.9
   contacts_service: ^0.4.6
+  flutter_share: ^1.0.2+1
+  vcard: any
+  path_provider: ^1.6.8
 
 dev_dependencies:
   flutter_test:
